# mtc-command-center

./: .cursorrules  .gitignore  AGENTS.md  README.md  apply_migration.py  verify_migration.ps1
MTC_COMMAND_CENTER/02_MTC_BACKTEST/: .gitignore  AGENT_PROMPT.md  CHANGELOG.md  README.md  RUN_MTC_BACKTEST.ps1  add_htf_cols.py  add_l12_cases.py  analyze_excel.py  app.py  check_supertrend_issue.py  check_tv_xlsx.py  check_tv_xlsx2.py  diag_signals.py  dump_super_props.py  dump_tv_trades.py  examine_excel.py  hardcoded_path_rewrite_TODO.md  mtc_bridge.mjs  optimize.py  parity_compare.py  parity_test.py  pine_trades.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_2025_audit.py  run_app.bat  run_pinets.mjs  run_tracker_ready_cases.py  runbook.ps1  styles.py  supertrend_props.txt  temp_get_params.py  tv_export_dump.txt  validate_syntax.mjs  verify_v2.py
MTC_COMMAND_CENTER/02_MTC_BACKTEST/backtest_assets/: 00_RUNBOOK.md  11_DASHBOARD_CURRENT_STATE.md  README.md  autorun.yaml  checksum_registry.json  data_catalog.json  data_catalog_compat.csv  data_catalog_compat.json  data_catalog_hist.json  module_registry.yaml  param_space.yaml  regime_calendar_4h.json  regime_calendar_4h.md  regime_override.yaml  validation_report.md
MTC_COMMAND_CENTER/02_MTC_BACKTEST/configs/: space_example.json
MTC_COMMAND_CENTER/02_MTC_BACKTEST/data/: .cache_index.json
MTC_COMMAND_CENTER/02_MTC_BACKTEST/data_providers/: __init__.py  base.py  binance_provider.py  binance_usdm_provider.py  csv_provider.py
MTC_COMMAND_CENTER/02_MTC_BACKTEST/data_tools/: __init__.py  download_cli.py  validate.py
MTC_COMMAND_CENTER/02_MTC_BACKTEST/docs/: PARITY_FREEZE.md  UI_PHASE3_PLAN.md  UI_PHASE3_PLAN_V2.md  backup_restore_runbook.md  command_cookbook.md  common_failure_playbook.md  dependency_lock_workflow.md  go_live_checklist.md  historical_backfill_etl.md  observability_runbook.md  optimizer_quickstart.md  optimizer_v0.md  parity_reproducibility.md  release_semver_changelog.md  staging_environment_mirror.md  strategy_properties_checklist.md  uat_scenarios.md
MTC_COMMAND_CENTER/02_MTC_BACKTEST/parity_suite_350/: CASE_CLASSIFICATION_PLAN.md  CASE_LIST_v1.md  OPERATION_SOP.md  (+21 more)
(+4628 files in other folders)
