[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtc-backtest"
version = "1.0.0"
description = "MTC Python Backtest & Optimization System — Pine Script parity engine"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "MTC Team"},
]

dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
    # Data
    "ccxt>=4.0.0",
    # UI
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    # Optimization
    "optuna>=3.5.0",
    # Utilities
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ── pytest ─────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "parity: marks tests that check TV↔PY parity",
]

# ── ruff (linter + formatter) ──────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── coverage ───────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/ui/*",
    "src/optimize/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
